Rewrote most of ch 4.  Need to verify my explanation of blame is accurate.

--- a/chapter-4.tex
+++ b/chapter-4.tex
@@ -1,17 +1,7 @@
 \chapter{Implementation of the Model}
 
-The model of computation defined above was implemented in the DrScheme integrated development environment.  Haskell and ML modules are written in subsets of their real syntaxes and compiled to Scheme modules.  Scheme modules are written with the Scheme language supported by the Scheme compiler of DrScheme.  A module defined in a particular language exports sets of declarations for the other languages and only imports sets of declarations from other modules meant only for its language.  Haskell can import ML and Scheme expressions, ML can import Scheme expressions, and Scheme can import Haskell expressions.  Haskell and ML use a form of type reconstruction called let-polymorphism instead of the explicit type system System F.  The domain of numbers for all languages is integers.  All languages have boolean values and operations, additional arithmetic operations, and composite data.  The majority of the ML implementation was taken from Kinghorn \cite{kinghorn07}.
+The model was implemented in the DrScheme integrated development environment.  Languages are separated into modules that export sets of definitions for the other languages to import.  Haskell and ML modules are written in subsets of their real syntaxes and compile to equivalent Scheme modules.  Scheme modules are written in a subset of their real syntax.  Type soundness is violated if Scheme modules use language constructs (variable mutation, for example) or export values (non-integer numbers, for example) not supported by the system of interoperation.  Haskell can import ML and Scheme exports, ML can import Scheme exports, and Scheme can import Haskell exports.  Haskell and ML use let-polymorphism instead of System F and use type reconstruction.  All languages use integers as their number domain.  In addition to the model, all languages have boolean values and operations, multiplication and division operations, and strings.  Haskell and Scheme have user-defined composite data types.  The ML implementation extends the implementation by Kinghorn \cite{kinghorn07}.
 
-\section{Importation Syntax}
+Languages interoperate by importing exports from other modules.  Importation expressions specify the names and types of exports and evaluate to them.  The Haskell expressions \texttt{:ml type "name"} and \texttt{:scheme type "name"} import ML and Scheme exports, respectively, where \texttt{type} is the expected type of the export and \texttt{name} is the export name.  The ML expression \texttt{name :G type} imports Scheme exports.  The Scheme expression \texttt{(:haskell "name" "type")} imports Haskell exports.  For example, \texttt{(:scheme "a $\rightarrow$ a" "identity") 0} imports the Scheme identity function to Haskell and applies it to zero.
 
-The model expressed language interoperation through nesting languages within each other as expressions.  Real-world code libraries interoperate through interfaces.  In the implementation, modules are the code libraries of interest.  Languages interoperate by importing a declaration exported by a module by specifying its name and type.  The Haskell syntax that imports ML and Scheme expressions is \texttt{:ml type "name"} and \texttt{:scheme type "name"}, respectively, where \texttt{type} and \texttt{name} are the types and names of the expressions, respectively.  The ML syntax that imports Scheme expressions is \texttt{name :G type}.  The Scheme syntax that imports Haskell expressions is \texttt{(:haskell name type)}.  For example, \texttt{(:scheme a $\rightarrow$ a "identity") 0} imports the Scheme identity function to Haskell and applies it to zero.
-
-\section{Importation Type Verification}
-
-The Haskell import expressions, the ML import expression for Scheme, and the Scheme import expression for Haskell verify the expected types match the actual types.  Where expressions from Haskell and ML are imported, their actual types can be checked immediately because Haskell and ML modules export the types of their exported declarations for import verification.  Where Scheme expressions are imported, their actual types can be checked only if they are not functions.  If they are functions, a DrScheme library that implements contracts for higher-order functions \cite{findler02}, is used to delay the verifications of their types.
-
-Contracts are the mechanism that verifies values crossing boundaries match their expected types.  The library also provides a mechanism for assigning blame to languages for type errors to indicate which is at fault.  If a Scheme value does not match its expected type, Scheme is at fault.  If an ML value does not match its expected type, ML is at fault.  If Scheme applies an ML function to the wrong value, Scheme is at fault.  ML cannot apply a Scheme function to the wrong type because such a function application expression would be ill-typed.
-
-\section{Limiting Scheme}
-
-The real-world Scheme of DrScheme represents Scheme within the system of interoperation.  The real-world Scheme has language constructs not supported or allowed by Haskell and ML.  Therefore Scheme modules are presumed to use only a subset of the features of Scheme that are compatible with Haskell and ML.  For example, a Scheme module could use side effects to break parametricity by determining the behavior of a function by the state of a global variable.
+The importation expressions verify that expected types match actual types.  The actual types of Haskell and ML imports can be validated immediately because their modules provide the types of their exports.  The actual types of Scheme imports are determined and validated during run time by contracts \cite{findler02} that are implemented by a standard library.  The contracts also blame the language at fault for a type error \cite{findler02}.  If the actual type of a Scheme value does not match its expected type, Haskell or ML is at fault.  If the actual type of a Haskell or ML value does not match its expected type, Scheme is at fault.  If Scheme applies a Haskell or ML function to an argument of the wrong type, Scheme is at fault.  Haskell and ML cannot apply a Scheme function to an argument of the wrong type because the application would be ill-typed.
