--- a/chapter-5.tex
+++ b/chapter-5.tex
@@ -1,8 +1,8 @@
 \chapter{Related Work}
 
-This work extends the work of Kinghorn \cite{kinghorn07} by adding Haskell and lists to his model of computation, proof of type soundness, and implementation of the model to explore the interoperation of incompatible evaluation strategies.  The work of Kinghorn extends the work of Matthews and Findler \cite{matthews07} by adding parametric polymorphism and parametricity to their model of computation, providing a more thorough proof of type soundness, and implementing the model with a fully-featured Scheme and a subset of Objective Caml, a dialect of ML.
+This work extends the work of Kinghorn \cite{kinghorn07} by adding Haskell and lists to his model of computation, proof of type soundness, and implementation of the model to enable the interoperation of incompatible evaluation strategies.  Kinghorn extended the work of Matthews and Findler \cite{matthews07} by adding parametric polymorphism and parametricity to their model of computation, providing a more thorough proof of type soundness, and implementing the model with a fully-featured Scheme and a subset of Objective Caml, a dialect of ML.
 
-Guha et al. \cite{guha07} describe a system of parametric polymorphic contracts for higher-order functions that assign blame for contract violations and preserve parametricity.  The system both ensures function arguments match the contract parameters and prevents functions from examining the types and values of their arguments. This model of computation uses two separate mechanisms, boundary expressions and type labels, respectively, to achieve the same result.
+Guha et al. \cite{guha07} describe a system of parametric polymorphic contracts for higher-order functions that assign blame for contract violations and preserve parametricity.  The system both ensures function arguments match the contract parameters and prevents functions from examining the types and values of their arguments. This model of computation uses two separate mechanisms, boundary expressions and label types, respectively, to achieve the same result.
 
 Perhaps the most mainstream systems of interoperation are the Common Object Request Broker Architecture (CORBA), the Component Object Model (COM), and the .NET Framework, yet not one of them supports interoperation between Haskell, ML, and Scheme as this model and implementation does.  CORBA, COM, and the .NET Framework support the interoperation of static and dynamic type systems and strict evaluation but not higher-order functions, parametric polymorphism, parametricity, or lazy evaluation \cite{omg04} \cite{microsoft07} \cite{ecma06}.
 
