--- a/chapter-6.tex
+++ b/chapter-6.tex
@@ -1,3 +1,3 @@
 \chapter{Future Work}
 
-The model of computation is sufficient to express the interoperation of languages with conflicting evaluation strategies and demonstrate the resolution of those conflicts with lists.  Certainly other data types could be added to the model, but they would add nothing new to the method of resolving conflicts between evaluation strategies and would further complicate the model.  The implementation of the model would benefit from additional support of standard language constructs and data types because its ability to create useful programs would much improve.  Compiling language modules to a more efficient implementation would increase the speed and usability of the implementation.  Adding languages with other evaluation strategies, such as normal order and applicative order, would be interesting but would grow the size and complexity of the model and proof at an exponential rate.  Further explorations of conflicting evaluation strategies would best be tackled with pairs of languages to minimize complexity.
+The model of computation is sufficient to express the interoperation of languages with conflicting evaluation strategies and demonstrate the resolution of those conflicts.  Certainly other data types could be added to the model, but they would add nothing new to the method of resolving conflicts between evaluation strategies and would further complicate the model.  The implementation of the model would be more useful if additional language constructs and data types were added.  Performance would improve if modules were compiled to bytecodes or machine code.  Adding languages with other evaluation strategies, such as normal order and applicative order, would be interesting, but the sizes of the model and proof would grow exponentially.  Further explorations of conflicting evaluation strategies would best be tackled with pairs of languages to minimize complexity.
