--- a/chapter-7.tex
+++ b/chapter-7.tex
@@ -1,3 +1,3 @@
 \chapter{Conclusions}
 
-This work sought to resolve three types of conflict between languages in a system of interoperation.  It resolves conflicting type systems by converting between equivalent expressions and applying type abstractions to lump types.  It resolves conflicting preservation of parametricity by making Haskell and ML values opaque to Scheme with label types.  It resolves conflicting evaluation strategies by delaying the conversion of lists until their contents are needed.  It enables the interoperation of functions with dynamic checks and contracts for higher-order functions.  It defined a model of computation that can express language interoperation where such incompatibilities arise, provided a proof of type soundness, and described an implementation of the model that supported additional language features.
+This work resolved three language incompatibilities in a system of interoperation for three diverse languages.  It resolved incompatible type systems with contracts for higher-order functions and lump types.  It resolved incompatible support for parametricity with label types.  It resolved incompatible evaluation strategies with delayed conversions for list constructions.  It defined a model of computation that can express interoperation where the aforementioned incompatibilities arise and resolve them, provided a proof of type soundness, and described an implementation of the model that supported additional language features.
