Fixed spacing for top line in OS core fis.

--- a/model/hcos.tex
+++ b/model/hcos.tex
@@ -1,6 +1,8 @@
 \begin{figure}[ph!]
 \centering
 \begin{tabular}{l}
+\vspace{5pt}
+
 $\mathscr{E}[(\lambda x:T.e_{H}^{1})$ $e_{H}^{2}]_{H}\rightarrow\mathscr{E}[e_{H}^{1}[e_{H}^{2}/x]]$ \\
 
 \vspace{5pt}
