--- a/model/mcos.tex
+++ b/model/mcos.tex
@@ -1,6 +1,8 @@
 \begin{figure}[ph!]
 \centering
 \begin{tabular}{l}
+\vspace{5pt}
+
 $\mathscr{E}[(\lambda x:T.e_{M})$ $v_{M}]_{M}\rightarrow\mathscr{E}[e_{M}[v_{M}/x]]$ \\
 
 \vspace{5pt}
