--- a/model/scos.tex
+++ b/model/scos.tex
@@ -1,6 +1,8 @@
 \begin{figure}[ph!]
 \centering
 \begin{tabular}{l}
+\vspace{5pt}
+
 $\mathscr{E}[(\lambda x.e_{S})$ $v_{S}]_{S}\rightarrow\mathscr{E}[e_{S}[v_{S}/x]]$ \\
 
 \vspace{5pt}
