Added a missing paren to the second reduction line.

--- a/figures/function-1.tex
+++ b/figures/function-1.tex
@@ -7,7 +7,7 @@
 
 \vspace{5pt}
 
-$\rightarrow$ & $(\lambda x_{2}:N.(^{[N]}HS$ $((\lambda x_{1}.\mathtt{nil})$ $(SH^{N}$ $x_{2})))$ $\overline{0}$ \\
+$\rightarrow$ & $(\lambda x_{2}:N.(^{[N]}HS$ $((\lambda x_{1}.\mathtt{nil})$ $(SH^{N}$ $x_{2}))))$ $\overline{0}$ \\
 
 \vspace{5pt}
 
