Removed an extra paren from the third reduction line in fig. forall-2.

--- a/figures/forall-2.tex
+++ b/figures/forall-2.tex
@@ -11,7 +11,7 @@ $\rightarrow$ & $(((^{\forall X_{2}.(N^{a}\rightarrow(X_{2}\rightarrow X_{2}))}H
 
 \vspace{5pt}
 
-$\rightarrow$ & $((^{N^{a}\rightarrow(N^{b}\rightarrow N^{b}))}HS$ $\lambda x_{1}.(\lambda x_{2}.x_{1}))$ $\overline{0})$ $\overline{1}$ \\
+$\rightarrow$ & $((^{N^{a}\rightarrow(N^{b}\rightarrow N^{b})}HS$ $\lambda x_{1}.(\lambda x_{2}.x_{1}))$ $\overline{0})$ $\overline{1}$ \\
 
 \vspace{5pt}
 
