Changed the caption.

--- a/figures/forall-3.tex
+++ b/figures/forall-3.tex
@@ -54,6 +54,6 @@ $\rightarrow$ & $\mathtt{cons}$ $\overline{0}$ $(SH^{L}$ $(^{L}HS$ $\mathtt{nil}
 
 $\rightarrow$ & $\mathtt{cons}$ $\overline{0}$ $\mathtt{nil}$
 \end{tabular}
-\caption{Polymorphic Haskell function converted to Scheme}
+\caption{Polymorphic function converted to Scheme function}
 \label{forall-3}
 \end{figure}
